# Project {
#     id: editor
# 
#     references: [
#         "iostools",
#         "particletools",
# 		"qbstools",
#         "shadertools",
#         "texturetools",
#         "codeeditor",
#         "grapheditor",
#     ]
# }

add_subdirectory(iostools)
add_subdirectory(particletools)
add_subdirectory(qbstools)
add_subdirectory(shadertools)
add_subdirectory(texturetools)
add_subdirectory(codeeditor)
add_subdirectory(grapheditor)
